# Vidya-Mitra

./: .firebaserc  .gitignore  README.md  delete_ai_engineer_roadmap.py  firebase.json  firebase_config.js  firestore.indexes.json  patch_dashboard.py  plan.txt  storage.rules
backend/: .env.example  .gitignore  delete_roadmap.py  firebase_admin_init.py  pyproject.toml  requirements.txt  server.py
backend/agent/: graph.py  interview_nodes.py  llm.py  nodes.py  state.py
backend/routes/: career.py  chat.py  dashboard.py  interview.py  progress.py  quiz.py  resume.py  roadmap.py
frontend/: .env.example  .gitignore  context.readme  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  auth.js  firebase_config.js  index.css  resumeDownload.js  resumeUpload.js  userService.js
frontend/src/components/: Achievements.jsx  CareerPaths.jsx  Dashboard.jsx  DashboardData.jsx  EditProfile.jsx  GoogleSignInModal.jsx  LandingPage.jsx  MockInterview.jsx  ProfileForm.jsx  Progress.jsx  Quiz.jsx  ResumeAnalysis.jsx  Roadmap.jsx
