[project]
name = "backend"
version = "1.0.0"
description = "VidyaGuide AI Backend - LangGraph + FastAPI + Groq"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.32.0",
    "langgraph>=0.2.50",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-core>=0.3.0",
    "firebase-admin>=6.6.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "pypdf>=4.3.0",
    "python-dotenv>=1.0.0",
]
